--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
   "main": "server/index.js",
   "scripts": {
+    "sass-watch": "sass sass:public/styles --watch --poll --no-source-map",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
     "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
@@ -17,6 +18,7 @@
     "md5": "^2.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "sass": "^1.32.0"
   }
 }
